# gi-data-plateform

./: .env.example  .gitignore  Dockerfile  README.md  cronjob-bronze.yaml  ddl_probe_result.json  kubeconfig-gi-poc.yaml  main.py  openssl_compat.cnf  pyproject.toml  requirements.txt  ruff.toml  run_pipeline.sh
.github/workflows/: ci-cd.yml
catalogue/: datahub_metadata.yml
dags/: dag_gi_pipeline.py  dag_phase1_clients.py  dag_phase2_interimaires.py  dag_phase3_performance.py  dag_poc_pipeline.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: schema.yml
dbt/models/gold_clients/: fact_retention_client.sql
dbt/models/gold_commercial/: fact_ca_hebdo_agence.sql  fact_ca_quotidien.sql  fact_commandes_pipeline.sql  fact_heures_hebdo.sql  fact_marge_mission.sql
dbt/models/gold_performance/: ranking_agences.sql  scorecard_agence.sql  tendances_agence.sql
dbt/models/gold_staffing/: fact_staffing_agence.sql  fact_turnover_int.sql
dbt/models/staging/: sources.yml
docs/: ANALYSE_KPI_COMPLEMENTAIRES.md  ANALYSE_KPI_MANQUANTS.md  CATALOGUE_KPI_GOLD.md  DATA_MAPPING.md  DDL_EVOLIA_FILTERED.sql  DEPLOY.md  GI_Data_Architecture_v3.4.md  RGPD_POLICIES.md  STATE_CARD.json  TESTING.md  architecture_cible_senior.md  ddl_iceberg_silver.sql  migration_ovh_lakehouse.md  plan_migration_silver_iceberg.md  procedure_ovhcloud_v3.4.md  state_card.md  state_card_rupture_ctt.md  superset_360_client_setup.md  superset_360_interimaire_setup.md  superset_indicateurs_complementaires_setup.md  superset_performance_agences_setup.md
quality/: ge_suite_phase2.py
scripts/: bronze_agences.py  bronze_clients.py  bronze_clients_external.py  bronze_interimaires.py  bronze_missions.py  ddl_gold_finitions.sql  ddl_gold_init.sql  ddl_gold_tables.sql  enrich_ban_geocode.py  gold_ca_mensuel.py  gold_clients_detail.py  gold_competences.py  gold_dimensions.py  gold_etp.py  gold_helpers.py  gold_operationnel.py  gold_qualite_missions.py  gold_recouvrement.py  gold_retention_client.py  gold_scorecard_agence.py  gold_staffing.py  gold_vue360_client.py  migrate_watermarks.py  pipeline_utils.py  probe_ddl.py  probe_ddl_schema.py  probe_pg.py  probe_silver_counts.py  purge_bronze.py  purge_gold.py  purge_silver.py  purge_silver_gold.py  rgpd_audit.py  seed_ref_naf.py  shared.py  shared_ok.py  silver_agences_light.py  silver_clients.py  silver_clients_detail.py  silver_competences.py  (+5 more)
scripts/spark/: migrate_silver_to_iceberg.py  spark_silver_agences_light.py  spark_silver_clients.py  spark_silver_clients_detail.py  spark_silver_competences.py  spark_silver_factures.py  spark_silver_interimaires.py  spark_silver_interimaires_detail.py  spark_silver_missions.py  spark_silver_temps.py
terraform/: main.tf  terraform.tfvars.example  variables.tfvars
tests/load/: locustfile.py
tests/unit/: test_critical.py  test_gold.py
